--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Test/CustomerManagement.Test/bin/Debug
 /Test/CustomerManagement.Test/obj/Debug
 /Test/CustomerManagement.Test/obj
+/Src/DataModel/obj
+/Src/DataModel/bin/Debug/net9.0-windows
