Logic for column determination in the dataloader, plus a couple of unit tests

--- a/Test/CustomerManagement.Test/CustomerManagement.Test.csproj
+++ b/Test/CustomerManagement.Test/CustomerManagement.Test.csproj
@@ -24,4 +24,10 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="DataLoader\Resources\CustomerData.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
