changes to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Test/CustomerManagement.Test/bin/Debug
 /Test/CustomerManagement.Test/obj/Debug
 /Test/CustomerManagement.Test/obj
+/Src/CDB/bin/Debug/net9.0
+/Src/CDB/obj
