Delete Code Behind and Create a User Interface

--- a/Src/CustomerManagement/CustomerManagement.csproj
+++ b/Src/CustomerManagement/CustomerManagement.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\CDB\CDB.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
+
 </Project>
