Customer Details View and back arrow for navigating back to the customers View

--- a/Src/CustomerManagement/CustomerManagement.csproj
+++ b/Src/CustomerManagement/CustomerManagement.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\CDB\CDB.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Resource Include="Images\BackArrow.png" />
+  </ItemGroup>
+
 </Project>
